Update form links to Office Forms

--- a/index.html
+++ b/index.html
@@ -627,14 +627,14 @@
 
     <div class="rawls-header-actions">
       <a
-        href="https://docs.google.com/forms/d/e/1FAIpQLSfPr71g-Bngv3rWphXkBO1MmLOaNJZeY8T5OxKwyVPf_0dhCg/viewform"
+        href="https://forms.office.com/r/ccUbG1hRZT"
         target="_blank"
         class="header-btn primary"
       >
         New Submission
       </a>
       <a
-        href="https://forms.gle/vwtWMBKFqEiwpRXB9"
+        href="https://forms.office.com/r/CZ7cWYgSzP"
         target="_blank"
         class="header-btn"
       >
