Remove filter hint from name options
Removed filter hint text from name options.

--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
           <label class="name-option">
             <input type="checkbox" id="exactNameMatch"> Match entire cell contents
           </label>
-          <span class="filter-hint">Tips: use initials “j.” or “j d”, prefix “jo*”, typos tolerated.</span>
+          <span class="filter-hint"></span>
         </div>
       </div>
 
